# ipl-winner-prediction

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  weekly_pipeline.yml
dashboard/: app.py
dashboard/data/: .gitignore  ipl.sqlite  model.pkl
dashboard/lib/: data.py  features.py  model.py  predict.py
dashboard/pages/: 1_Predict.py  2_Calibration.py  3_Data.py
docker/: airflow-compose.yml  docker-compose.yml
docs/: MODEL_CARD.md  WRITEUP.md  data-sources.md  problem-definition.md
docs/decisions/: 007-feature-engineering-policy.md  008-orchestration-choices.md  ADR-001-hosting-and-orchestration.md  ADR-002-warehouse-choice.md  ADR-003-data-layering.md  ADR-004-ml-evaluation.md  ADR-005-data-source-compliance.md  ADR-006-api-ingestion-patterns.md
ingestion/cricketdata/: fixtures_client.py  fixtures_parser.py  schemas.py
ingestion/cricsheet/: bronze_loader.py  downloader.py  schemas.py  silver_parser.py
ingestion/db/: connection.py  migrate.py
ingestion/db/migrations/: 001_initial_schemas.sql  002_gold_fact_matches.sql  003_http_responses.sql  004_silver_venues.sql  005_silver_fixtures.sql  006_gold_venues_and_fixtures.sql  007_rename_silver_to_silver_raw.sql
ingestion/http/: bronze_writer.py  client.py  rate_limiter.py
ingestion/reference/: ipl_venues.yaml
ingestion/wikipedia/: schemas.py  venue_client.py  venue_parser.py
models/: baseline.py  calibration_analysis.py  data.py  evaluation.py  train_baseline.py  train_logistic.py  train_xgboost.py
orchestration/airflow/: .gitignore
orchestration/airflow/dags/: ipl_pipeline.py
scripts/: build_dashboard_assets.py
tests/fixtures/: cricketdata_current_matches.json  sample_match.json  wikipedia_wankhede.json
tests/integration/: test_end_to_end.py  test_phase3_ingestion.py
tests/unit/: test_fixtures_parser.py  test_modeling_data.py  test_rate_limiter.py  test_silver_parser.py  test_smoke.py  test_venue_parser.py
warehouse/: dbt_project.yml  profiles.yml
warehouse/macros/: get_custom_schema.sql
warehouse/models/features/: _schema.yml  features__head_to_head.sql  (+4 more)
warehouse/seeds/: team_canonical.csv
warehouse/snapshots/: dim_teams_snapshot.sql
warehouse/tests/: assert_no_temporal_leakage.sql
(+14 files in other folders)
