[project]
name = "ipl-winner-prediction"
version = "0.1.0"
description = "Open-data IPL match prediction pipeline"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "pydantic>=2.8",
    "tenacity>=9.0",
    "pandas>=2.2",
    "streamlit>=1.38",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "dbt-core>=1.8",
    "dbt-postgres>=1.8",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "mlflow>=2.10",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pre-commit>=3.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
